fix scrollbar bug

--- a/4.Clients/WebApi/ClientApp/src/app/app.component.css
+++ b/4.Clients/WebApi/ClientApp/src/app/app.component.css
@@ -17,5 +17,5 @@
 
 .authenticated{
   margin-left: 140px;
-  margin-top: 75px;
+  width: calc(100% - 140px);
 }
