--- a/4.Clients/WebApi/ClientApp/src/styles.css
+++ b/4.Clients/WebApi/ClientApp/src/styles.css
@@ -67,3 +67,8 @@ button > i {
 .ant-col-12 {
   width: 45%;
 }
+
+/* overrides ng zorro default 100% height */
+.margin-top-fix{
+  margin-top: 75px !important;
+}
